--- a/instagram_android/app/src/main/res/layout/activity_main.xml
+++ b/instagram_android/app/src/main/res/layout/activity_main.xml
@@ -9,35 +9,18 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/app_bar_layout">
+        android:layout_above="@id/nav_view">
 
     </FrameLayout>
 
 
-    <com.google.android.material.appbar.AppBarLayout
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        app:menu="@menu/bottom_nav_menu"
         android:layout_alignParentBottom="true"
-        android:id="@+id/app_bar_layout">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/home_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            >
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/nav_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:layout_marginRight="15dp"
-                app:menu="@menu/bottom_nav_menu"
-                app:labelVisibilityMode="unlabeled"/>
-
-        </androidx.appcompat.widget.Toolbar>
-
-    </com.google.android.material.appbar.AppBarLayout>
+        app:labelVisibilityMode="unlabeled"/>
 
 </RelativeLayout>
