--- a/instagram_android/app/src/main/res/layout/activity_main.xml
+++ b/instagram_android/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,9 @@
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="@android:color/background_light"
         app:menu="@menu/bottom_nav_menu"
+        android:theme="@style/BottomNavThem"
         android:layout_alignParentBottom="true"
         app:labelVisibilityMode="unlabeled"/>
 
