--- a/instagram_android/app/src/main/res/values/colors.xml
+++ b/instagram_android/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="systemRed">#E91E63</color>
+    <color name="red">#FA0303</color>
 </resources>
